Add temporary signup flow

--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -7,7 +7,7 @@
     <link rel="icon" href="/favicon.png">
   </head>
   <body>
-    <ctzn-app></ctzn-app>
+    <ctzn-signup></ctzn-signup>
     <script type="module" src="/js/signup.build.js"></script>
   </body>
 </html>
