--- a/static/css/common.css
+++ b/static/css/common.css
@@ -85,12 +85,38 @@ body {
   }
 }
 
+header {
+  position: fixed;
+  z-index: 100;
+  top: 10px;
+  left: 20px;
+  height: calc(100vh - 20px);
+}
+
 main {
   display: grid;
   grid-template-columns: minmax(0, 1fr) 220px;
   grid-gap: 20px;
   margin: 0 auto;
   max-width: 840px;
+}
+
+@media (max-width: 1280px) {
+  body {
+    padding-left: 200px;
+  }
+}
+
+@media (max-width: 1140px) {
+  main {
+    display: block;
+    max-width: 600px;
+    margin: 0 0 0 100px;
+  }
+
+  main > :nth-child(2) {
+    display: none;
+  }
 }
 
 .unread {
