--- a/static/css/common.css
+++ b/static/css/common.css
@@ -1,6 +1,9 @@
 body {
   margin: 0;
-  padding-left: 100;
+}
+
+body.no-pad {
+  padding: 0;
 }
 
 header .menu {
@@ -74,8 +77,8 @@ main {
   }
 
   header .menu {
-    padding-left: 10px;
-    padding-right: 10px;
+    padding-left: 5px;
+    padding-right: 20px;
     transform: translateX(-100%);
     transition: transform 0.5s;
   }
