UI reworks, including mobile

--- a/views/post.ejs
+++ b/views/post.ejs
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="/css/tailwind.css">
     <link rel="icon" href="/favicon.png">
   </head>
-  <body>
+  <body class="bg-gray-50">
     <ctzn-post-page></ctzn-post-page>
     <script type="module" src="/js/post.build.js"></script>
   </body>
