--- a/views/user.ejs
+++ b/views/user.ejs
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="/css/tailwind.css">
     <link rel="icon" href="/favicon.png">
   </head>
-  <body>
+  <body class="bg-gray-50">
     <ctzn-user></ctzn-user>
     <script type="module" src="/js/user.build.js"></script>
   </body>
