--- a/static/css/common.css
+++ b/static/css/common.css
@@ -10,9 +10,13 @@ header .menu {
   position: fixed;
   z-index: 41;
   top: 10px;
-  left: calc(50vw - 680px);
-  padding-left: 20px;
+  left: calc(50vw - 550px);
   height: calc(100vh - 10px);
+  width: 170px;
+}
+
+header .menu.open {
+  transform: translateX(0%);
 }
 
 header .mobile-top {
@@ -35,54 +39,42 @@ header .mobile-bot {
   height: 70px;
 }
 
+nav {
+  position: fixed;
+  z-index: 41;
+  top: 10px;
+  right: calc(50vw - 550px);
+  height: calc(100vh - 10px);
+  width: 215px;
+}
+
 main {
-  display: grid;
-  grid-template-columns: minmax(0, 1fr) 220px;
-  grid-gap: 20px;
   margin: 0 auto;
-  max-width: 840px;
+  max-width: 640px;
 }
 
-@media (max-width: 1400px) {
-  header .menu {
-    left: 0;
-  }
-}
-
-@media (max-width: 1280px) {
+@media (max-width: 1100px) {
   body {
-    padding-left: 200px;
-  }
-}
-
-@media (max-width: 1140px) {
-  main {
-    display: block;
-    max-width: 600px;
-    margin: 0 0 0 100px;
-  }
-
-  main > :nth-child(2) {
-    display: none;
-  }
-}
-
-@media (max-width: 1000px) {
-  body {
-    padding: 50px 0;
+    padding: 50px 0 100px;
   }
 
   main {
     margin: 0 auto;
   }
 
+  nav {
+    display: none;
+  }
+
   header .menu {
-    padding-left: 5px;
+    left: 0;
+    width: 220px;
+    padding-left: 15px;
     padding-right: 20px;
     transform: translateX(-100%);
     transition: transform 0.5s;
   }
-
+  
   header .menu.open {
     transform: translateX(0%);
     border-right: 1px solid #ccc;
@@ -251,22 +243,22 @@ main {
   border-top: 6px solid rgba(17, 17, 17, 0.95);
 }
 
-ctzn-post {
-  display: block;
+.grid-post {
+  grid-template-columns: 56px 1fr;
 }
 
-ctzn-feed > .post.reply ctzn-post[as-reply-parent] {
-  position: relative;
+@media (max-width: 640px) {
+  .grid-post {
+    grid-template-columns: 46px 1fr;
+  }
 }
 
-ctzn-feed > .post.reply ctzn-post[as-reply-parent]:before {
-  content: "";
-  position: absolute;
-  display: block;
-  width: 2px;
-  left: 28px;
-  top: 85px;
-  height: calc(100% - 84px);
-  background: rgb(193 193 193);
-  z-index: 1;
+.popup-wrapper {
+  background: rgba(0, 0, 0, 0.45);
+}
+
+@media (max-width: 640px) {
+  .popup-wrapper {
+    background: #fff;
+  }
 }
