--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="/css/tailwind.css">
     <link rel="icon" href="/favicon.png">
   </head>
-  <body>
+  <body class="bg-gray-50">
     <ctzn-app></ctzn-app>
     <script type="module" src="/js/main.build.js"></script>
   </body>
