--- a/views/notifications.ejs
+++ b/views/notifications.ejs
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="/css/tailwind.css">
     <link rel="icon" href="/favicon.png">
   </head>
-  <body>
+  <body class="bg-gray-50">
     <ctzn-notifications></ctzn-notifications>
     <script type="module" src="/js/notifications.build.js"></script>
   </body>
