--- a/static/css/common.css
+++ b/static/css/common.css
@@ -71,8 +71,11 @@ main {
     padding-left: 15px;
     padding-right: 20px;
     transform: translateX(-100%);
-    transition: transform 0.5s;
     z-index: 41;
+  }
+  
+  header .menu.transition-enabled {
+    transition: transform 0.5s;
   }
   
   header .menu.open {
