Adapt the mobile bottom-menu to grow according to the environment

--- a/static/css/common.css
+++ b/static/css/common.css
@@ -35,7 +35,8 @@ header .mobile-bot {
   bottom: 0;
   left: 0;
   width: 100vw;
-  height: 70px;
+  height: 55px;
+  height: calc(55px + env(safe-area-inset-bottom));
 }
 
 nav {
