Hide the top menu on mobile when scrolling down

--- a/static/css/common.css
+++ b/static/css/common.css
@@ -26,6 +26,11 @@ header .mobile-top {
   left: 0;
   width: 100vw;
   height: 50px;
+  transition: top 0.1s;
+}
+
+header .mobile-top.hidden {
+  top: -50px;
 }
 
 header .mobile-bot {
