--- a/static/css/common.css
+++ b/static/css/common.css
@@ -9,9 +9,10 @@ body.no-pad {
 header .menu {
   position: fixed;
   top: 0px;
-  left: calc(50vw - 550px);
+  left: 0;
   height: 100vh;
-  width: 175px;
+  width: 250px;
+  padding-left: 5px;
 }
 
 header .menu.open {
@@ -35,10 +36,10 @@ header .mobile-bot {
 nav {
   position: fixed;
   z-index: 29;
-  top: 10px;
-  right: calc(50vw - 550px);
-  height: calc(100vh - 10px);
-  width: 215px;
+  top: 0;
+  right: 0;
+  height: 100vh;
+  width: 250px;
 }
 
 main {
@@ -59,8 +60,6 @@ main {
   header .menu {
     left: 0;
     width: 220px;
-    padding-left: 15px;
-    padding-right: 20px;
     transform: translateX(-100%);
     z-index: 41;
   }
