--- a/static/css/common.css
+++ b/static/css/common.css
@@ -236,6 +236,16 @@ main {
   grid-template-columns: 56px 1fr;
 }
 
+.grid-2col {
+  grid-template-columns: 1fr 1fr;
+}
+
+@media (max-width: 1150px) {
+  .grid-2col {
+    grid-template-columns: 1fr;
+  }
+}
+
 .popup-wrapper {
   background: rgba(0, 0, 0, 0.45);
 }
