Visual improvements to desktop view of profiles; also fix img fallback bug

--- a/static/css/common.css
+++ b/static/css/common.css
@@ -56,8 +56,14 @@ main {
   max-width: 640px;
 }
 
+main.wide {
+  margin: 0 250px;
+  max-width: 940px;
+}
+
 @media (max-width: 1150px) {
-  main {
+  main,
+  main.wide {
     margin: 0 auto;
     padding-bottom: 100px;
   }
