--- a/static/css/common.css
+++ b/static/css/common.css
@@ -48,11 +48,11 @@ nav {
   top: 0;
   right: 0;
   height: 100vh;
-  width: 250px;
+  max-width: calc(100vw - 910px);
 }
 
 main {
-  margin: 0 auto;
+  margin: 0 0 0 260px;
   max-width: 640px;
 }
 
