--- a/static/css/common.css
+++ b/static/css/common.css
@@ -14,6 +14,10 @@ textarea {
   -moz-appearance: none;
   appearance: none;
 }
+*:focus {
+  outline: none;
+  border-color: rgb(37, 99, 235) !important;
+}
 
 header .menu {
   position: fixed;
