Add 'pre > code' selector for rendering code blocks

--- a/static/css/common.css
+++ b/static/css/common.css
@@ -57,6 +57,12 @@ main.col2 > :last-child {
   min-width: 0;
 }
 
+pre > code {
+  display: block;
+  overflow-y: scroll;
+  padding: 0.6rem 1rem !important;
+}
+
 @media (max-width: 1400px) {
   main.col2 {
     display: block;
