--- a/static/css/common.css
+++ b/static/css/common.css
@@ -182,6 +182,21 @@ pre > code {
   background: #fff;
 }
 
+app-subnav {
+  scrollbar-width: thin;
+  scrollbar-color: #C8D1DA/*gray-300*/ #E5E7EB/*gray-200*/;
+}
+app-subnav::-webkit-scrollbar {
+  height: 5px;
+}
+app-subnav::-webkit-scrollbar-track {
+  background: #E5E7EB/*gray-200*/;
+}
+app-subnav::-webkit-scrollbar-thumb {
+  background-color: #C8D1DA/*gray-300*/;
+  border-radius: 6px;
+}
+
 *[data-tooltip] {
   position: relative;
 }
