--- a/static/css/common.css
+++ b/static/css/common.css
@@ -88,7 +88,15 @@ pre > code {
   }
 }
 
+.no-header-only {
+  display: none;
+}
+
 @media (max-width: 1150px) {
+  .no-header-only {
+    display: block;
+  }
+
   main {
     margin: 0 auto;
     padding-bottom: 100px;
