Slightly more borders to help with stream readability

--- a/static/css/common.css
+++ b/static/css/common.css
@@ -440,6 +440,11 @@ app-subnav::-webkit-scrollbar-thumb {
   }
 }
 
+.img-sizing-free {
+  max-height: 300px;
+  object-fit: cover;
+}
+
 .img-sizing-big {
   height: 300px;
   object-fit: cover;
