--- a/static/css/common.css
+++ b/static/css/common.css
@@ -110,7 +110,7 @@ pre > code {
   display: none;
 }
 
-@media (min-width: 1400px) {
+@media (min-width: 1024px) {
   .widescreen-hidden {
     display: none;
   }
@@ -119,7 +119,7 @@ pre > code {
   }
 }
 
-@media (max-width: 1400px) {
+@media (max-width: 1024px) {
   main.wide {
     max-width: 640px;
   }
@@ -253,20 +253,21 @@ pre > code {
   background: #fff;
 }
 
+/*
 app-subnav {
   scrollbar-width: thin;
-  scrollbar-color: #C8D1DA/*gray-300*/ #E5E7EB/*gray-200*/;
+  scrollbar-color: #C8D1DA #E5E7EB;
 }
 app-subnav::-webkit-scrollbar {
   height: 5px;
 }
 app-subnav::-webkit-scrollbar-track {
-  background: #E5E7EB/*gray-200*/;
+  background: #E5E7EB;
 }
 app-subnav::-webkit-scrollbar-thumb {
-  background-color: #C8D1DA/*gray-300*/;
+  background-color: #C8D1DA;
   border-radius: 6px;
-}
+}*/
 
 *[data-tooltip] {
   position: relative;
